fixed bg color on forms and changed font weight. contact us copy on slider was changed to serve search. 3 added tagline in the user show dropdown table 4. alignment on logo under mobile view was corrected

--- a/public/stylesheet/customstyle.css
+++ b/public/stylesheet/customstyle.css
@@ -106,9 +106,10 @@ a.btn:hover {
   background-color: #4A4A4A;
 
 }
- .img-size {
+  .img-size {
       max-width: 183px;
-      text-align: center;
+     
+      
     }
 
 .landing-column {
@@ -127,6 +128,7 @@ a.btn:hover {
   display: block;
   border: 5px solid #40EC9A;;
   border-radius: 50%;
+  text-align: center;
 }
 
 .round-btn {
@@ -280,6 +282,8 @@ background-color: #ccc;
 .form-control {
   background-color: #eee;
   height: 48px;
+  
+  text-transform: capitalize;
 }
 .form-control:hover {
   background-color: #fbfbfb;
@@ -289,6 +293,7 @@ background-color: #ccc;
 .input-group > .input-group-addon,
 .input-group > .input-group-btn > .btn {
   height: 48px;
+
 }
 select.input-group > .form-control,
 select.input-group > .input-group-addon,
@@ -322,7 +327,9 @@ select.input-group-lg > .input-group-btn > .btn {
   margin-left: -1px;
 }
 .form-control:focus {
-  outline: 0;
+  background-color: #fbfbfb;
+  
+  font-weight: 600;
 }
 .form-control,
 .input-group span,
@@ -450,4 +457,18 @@ select.input-group-lg > .input-group-btn > .btn {
       height: 800px;
     }
 
-    } /*end media query md *?
+    } /*end media query md */
+
+
+    @media screen and (max-width: 768px){
+
+    .img-size-mobile {
+      max-width: 183px;
+     
+      margin: 0px auto;
+    }
+      
+    }
+
+
+
